# ai-commit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: prd.txt
src/: main.rs
src/ai/: mod.rs
src/diff/: mod.rs
src/git/: mod.rs
src/prompt/: mod.rs
