[package]
name = "ai-commit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
inquire = "0.7.5"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10.1"
